--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,11 @@
 buildscript {
     ext.kotlin_version = '1.7.10'
     repositories {
-        google()
-        mavenCentral()
+        // google()
+        // mavenCentral()
+        maven { url 'https://maven.aliyun.com/repository/google'; }
+        maven { url 'https://maven.aliyun.com/repository/central'; }
+        maven { url 'https://maven.aliyun.com/repository/public'; }
     }
 
     dependencies {
@@ -13,8 +16,11 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        mavenCentral()
+        // google()
+        // mavenCentral()
+        maven { url 'https://maven.aliyun.com/repository/google'; }
+        maven { url 'https://maven.aliyun.com/repository/central'; }
+        maven { url 'https://maven.aliyun.com/repository/public'; }
     }
 }
 
