--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,7 @@
-org.gradle.jvmargs=-Xmx1536M
+org.gradle.jvmargs=-Xmx2048M
 android.useAndroidX=true
 android.enableJetifier=true
+# systemProp.http.proxyHost=localhost
+# systemProp.http.proxyPort=10809
+# systemProp.https.proxyHost=localhost
+# systemProp.https.proxyPort=10809
