--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 0.0.1+1
 
 environment:
   sdk: '>=2.19.6 <4.0.0'
@@ -45,6 +45,10 @@ dependencies:
   shared_preferences: ^2.1.0
   settings_ui: ^2.0.2
   tuple: ^2.0.1
+  package_info_plus: ^4.0.0
+  version: ^3.0.2
+  about: ^2.1.3
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +73,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - lib/assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
